--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_comments">CommentsActivity</string>
+    <string name="title_activity_comments">Comments</string>
     <string name="comments">Comments</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="search">Search</string>
-    <string name="title_activity_photo_grid">PhotoGridActivity</string>
+    <string name="title_activity_photo_grid">Photos</string>
     <string name="login_with_instagram">Login with Instagram</string>
 </resources>
